--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,15 +2,47 @@
    <HEAD>
      <TITLE> Mi primera pagina </TITLE>
    </HEAD>
-   <BODY>
-      <h1> Mi perfil para la universidad</h1>
+   <BODY style="background:cyan">
+      <h1 style="color:blue"> Mi perfil para la universidad</h1>
       <p> Holi soy Myaaaaaa, a mi me encantaria estudiar psicologia en la UAZ o Marqueting y pblicidad en la UNID pero aun no me decido por que tengo otras dos opciones, pero tengo pensado estudiar una de las carreras que me gustan y cuando la termine estudiar puedo seguir con otra. 
 
       <h2>Mi bachillerato </h2>
       <p> Estoy estudiando el bachillerato de Humanidades Sociales...
       <h3>Mi FPT </h3>
-      <p> Estoy en la formacion de informatica 
+      <p> Estoy en la formacion de informatica
+      <br>
+      <img src="../images/sis.jpeg">
+      <img src="https://img.freepik.com/foto-gratis/fondo-pantalla-optimismo-cara-sonriente_23-2150039316.jpg?size=626&ext=jpg&ga=GA1.1.1412446893.1705449600&semt=ais">
       <h4>Mis Pasatiempos Favoritos </h4>
       <p> Mis pasatiempos son: escucar musica, limpiar mi cuato, salir con mis amigos o solo con mi mejor amiga, me gusta muchisimi ver series y peliculas yo diria que es mi pasatiempo favorito.
+      <h2> Materis </h2>
+      <ul>
+         <li> Probabilidad y estadistica</li>
+         <li>Geografia</li>
+      </ul>
+      <h4>Mi top materias favoritas</h4>
+      <ol>
+         <li>Informatica</li>
+         <li>Filosofia</li>
+      </ol>
+
+      <table border="1">
+        <th> Lunes</th>
+        <th> Martes</th>
+        <th> Miercoles</th>
+        <tr>
+           <td>Caminar</td>
+           <td>Saltar</td>
+           <td>Comer</td>
+        </tr>
+        <tr>
+           <td>Ir de compras</td>
+           <td>Leer</td>
+           <td>Ver una serie</td>
+        </tr>
+      </table>
+
+<button style="background:purple"> SALUDAR </button>
+
    </BODY>
 </HTML>
