--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,6 +1,8 @@
 <HTML>
    <HEAD>
-   <link rel="stylesheet" type="text/css" href="../CSS/style.css"
+   <link rel="stylesheet" type="text/css" href="../CSS/style.css">
+
+   <script type="text/javascript" src="../JavaScript/funtions.js"> </script>
      <TITLE> Mi primera pagina </TITLE>
    </HEAD>
    <BODY style="background:cyan">
@@ -16,7 +18,7 @@
       <img src="https://img.freepik.com/foto-gratis/fondo-pantalla-optimismo-cara-sonriente_23-2150039316.jpg?size=626&ext=jpg&ga=GA1.1.1412446893.1705449600&semt=ais">
       <h4>Mis Pasatiempos Favoritos </h4>
       <p> Mis pasatiempos son: escucar musica, limpiar mi cuato, salir con mis amigos o solo con mi mejor amiga, me gusta muchisimi ver series y peliculas yo diria que es mi pasatiempo favorito.
-      <h2> Materis </h2>
+      <h2 id="palabrita"> Materis </h2>
       <ul>
          <li> Probabilidad y estadistica</li>
          <li>Geografia</li>
@@ -43,7 +45,6 @@
         </tr>
       </table>
 
-<button style="background:purple"> SALUDAR </button>
-
+<button onclick="changeColor()"> SALUDAR </button> 
    </BODY>
 </HTML>
