--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,22 @@
      <TITLE> Mi primera pagina </TITLE>
    </HEAD>
    <BODY style="background:cyan">
+      <header>
+         <nav>
+              <ul>
+                    <li>
+                        <a href="index.html"> INICIO </a>
+                     </li>
+                     <li>
+                        <a href="tema1.html"> TEMA 1 </a>
+                      </li>
+                     <li>
+                        <a href="tema2.html"> TEMA 2 </a>
+                     </li>
+                </ul> 
+           </nav>
+      </header>
+
       <h1 style="color:blue"> Mi perfil para la universidad</h1>
       <p class="parrafito"> Holi soy Myaaaaaa, a mi me encantaria estudiar psicologia en la UAZ o Marqueting y pblicidad en la UNID pero aun no me decido por que tengo otras dos opciones, pero tengo pensado estudiar una de las carreras que me gustan y cuando la termine estudiar puedo seguir con otra. 
 
