agregue cositas a ccs

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -61,6 +61,16 @@
         </tr>
       </table>
 
-<button onclick="changeColor()"> SALUDAR </button> 
+<button onclick="enviarMsg()"> SALUDAR </button> 
+<form action="#">
+   <label for="name"> Nombre: </label>
+   <input  type="text" id="nombre">
+   <br>
+ </form>
+<form action="#">
+   <label for="name"> Apellido: </label>
+   <input  type="text" id="apellido">
+   <br>
+ </form>
    </BODY>
 </HTML>
