se agregaron etiquetitas

--- a/HTML/tema 4.html
+++ b/HTML/tema 4.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">&gt;>
 
 
-    </head >
+    </head>
     <body>
         <div class="container">
             <header class="page-header">
@@ -15,11 +15,23 @@
                         <a href="#">INICIO</a>
                     </li>
                     <li>
-                        <a href="#">SOBRE MI</a>
+                        <a href="tema1.html">SOBRE MI</a>
                         </li>
                 </ul>
             </header>
         </div>
+        <div class="jumbotron">
+            <h1>Mya Michell</h1>
+            <p class="text-justify">Hola soy Mya soy estudiante</p>
+            <a class="btn btn-success btn-primary" href="#">btn-primary</a>
+            <a class="btn btn-success btn-sucess" href="#">btn-sucess</a>
+            <a class="btn btn-success btn-info" href="#">btn-info</a>
+            <a class="btn btn-success btn-blok" href="#">call me</a>
+            <a class="btn btn-success btn-warning" href="#">btn-warning</a>
+            <a class="btn btn-success btn-danger" href="#">btn-danger</a>
+            <a class="btn btn-success btn-link" href="#">btn-link</a>
+        </div>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>&gt;
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>&gt;
     </body>
