--- a/HTML/tema5.html
+++ b/HTML/tema5.html
@@ -6,6 +6,27 @@
     <BODY>
       <h1>Box Vs Drop Shadow</h1>
       <h2>Coincide cuando el usuario interactúa con un elemento con un dispositivo señalador, pero no necesariamente lo activa. Generalmente se activa cuando el usuario se desplaza sobre un elemento con el cursor (puntero del mouse). </h2>
-      <img src="../IMAGES/box vs drop.jpg" alt="box vs drop" style="width:100%;">
+      <img src="../IMAGES/box vs drop.jpg" alt="box vs drop" style="width:470px;">
+
+      <h1>Hover efect</h1>
+      <h2>Un efecto de desplazamiento CSS tiene lugar cuando un usuario pasa el cursor sobre un elemento y el elemento responde con efectos de transición . Se utiliza para marcar los elementos clave de la página web y es una forma eficaz de mejorar la experiencia del usuario.</h2>
+      <img src="../IMAGES/hover efects.png" alt="hover efects" style="width:470px;">
+      
+      <h1>Focus Selector</h1>
+      <h2> se activa cuando el elemento tiene el foco del navegador, es decir, cuando el elemento está seleccionado. Normalmente se aplica a los elementos de los formularios cuando están activados y por tanto, se puede escribir directamente en esos campos.</h2>
+      <img src="../IMAGES/focus selector.jpg" alt="focus selector" style="width:470px;">
+
+      <h1>Cursor Pointer</h1>
+      <h2>En CSS, los cursores se utilizan para cambiar la apariencia del cursor del ratón cuando se encuentra sobre un elemento interactivo. Esto permite personalizar la forma del cursor y proporcionar retroalimentación visual al usuario.</h2>
+      <img src="../IMAGES/cursor pointer.png" alt="cursor pointer" style="width:470px;">
+
+      <h1>Slider Animation</h1>
+      <h2>Las animaciones CSS3 permiten animar la transición entre un estilo CSS y otro. Las animaciones constan de dos componentes: un estilo que describe la animación CSS y un conjunto de fotogramas que indican su estado inicial y final, así como posibles puntos intermedios en la misma.</h2>
+      <img src="../IMAGES/slider animation.jpg" alt="slider animation" style="width:470px;">
+
+      <h1>Keyframes</h1>
+      <h2> La regla arroba @keyframes permite a los autores controlar los pasos intermedios en una secuencia de animación CSS mediante el establecimiento de keyframes (o puntos de trayectoria) a lo largo de la secuencia de animación que debe ser alcanzado por determinados puntos durante la animación.</h2>
+      <img src="..IMAGES/keyframes.png/" alt="keyframes" style="width:470px;">
+
     </BODY>
  </HTML>
